--- a/style.css
+++ b/style.css
@@ -28,10 +28,11 @@ body * {
   color: var(--text-color);
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: auto;
   margin-top: 56px auto 0px;
-  padding: 0 24px;    
+  padding: 0 24px;
 }
 
 /* profiele */
