--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
 :root {
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
@@ -11,6 +13,7 @@
   --highlight-color: rgba(255, 255, 255, 0.2);
   --switch-bg-url: url(./assets/moon-stars.svg);
 }
+
 .light {
   --text-color: black;
   --bg-url: url(./assets/bg-mobile-light.jpg);
@@ -20,23 +23,25 @@
   --highlight-color: rgba(0, 0, 0, 0.1);
   --switch-bg-url: url(./assets/sun.svg);
 }
+
 body {
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
 }
+
 body * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
 }
+
 #container {
   width: 100%;
   max-width: 588px;
-  margin: auto;
-  margin-top: 56px auto 0px;
+  margin: 56px auto 0px;
   padding: 0 24px;
 }
 
-/* profiele */
+/* profile */
 #profile {
   text-align: center;
   padding: 24px;
@@ -47,14 +52,15 @@ body * {
 }
 
 #profile p {
-  font-weight: 500px;
+  font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
 }
+
 /* switch */
 #switch {
-  width: 64px;
   position: relative;
+  width: 64px;
 
   margin: 4px auto;
 }
@@ -72,10 +78,11 @@ body * {
   z-index: 1;
   transform: translateY(-50%);
 
-  animation: slide-back 0.3s;
+  animation: slide-back 0.2s;
 }
+
 .light #switch button {
-  animation: slide-in 0.4s forwards;
+  animation: slide-in 0.2s forwards;
 }
 
 #switch button:hover {
@@ -94,9 +101,9 @@ body * {
 }
 
 /* links */
-
 ul {
   list-style: none;
+
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -123,18 +130,20 @@ ul li a {
 
   transition: background 0.2s;
 }
-/* pseud-selector */
 
+/* pseudo-selector */
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
-/*social links */
+
+/* social links */
 #social-links {
   display: flex;
   justify-content: center;
 
   padding: 24px 0;
+
   font-size: 24px;
 }
 
@@ -147,9 +156,9 @@ ul li a:hover {
   transition: background 0.2s;
   border-radius: 50%;
 }
+
 #social-links a:hover {
   background: var(--highlight-color);
-  padding: 16px;
 }
 
 footer {
@@ -157,17 +166,19 @@ footer {
   text-align: center;
   font-size: 14px;
 }
+
 /* media queries */
-@media (min-width: 7px) {
+@media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
+
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
-/* animation */
 
+/* animation */
 @keyframes slide-in {
   from {
     left: 0;
@@ -176,6 +187,7 @@ footer {
     left: 50%;
   }
 }
+
 @keyframes slide-back {
   from {
     left: 50%;
